--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h2, h3{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1.5);
+    transform: translate(-50%, -50%);
     margin: 0 auto;
     max-width: 240px;
     padding: 20px;
